--- a/index.html
+++ b/index.html
@@ -1,12 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelMojo</title>
+  <meta charset="UTF-8" />
+  <title>Flight Mojo</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
+  <!-- navigation -->
+
+  <header>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <h1>
+      <a href="/">
+        TRAVEL MOJO
+      </a>
+    </h1>
+
+    <!-- RANDOM CODE BELOW -->
+
+    <!-- <div class="navbar">
+  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a> -->
+
+    <nav>
+
+      <!-- Unordered list element -->
+      <ul>
+        <!-- List item element-->
+        <li>
+          <!-- Anchor element -->
+          <a href="#flights">Flights</a>
+        </li>
+        <li>
+          <a href="#hotels">Hotels</a>
+        </li>
+        <li>
+          <a href="#car-rentals">Car Rentals
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- hero/jumbotron -->
+  <section class="hero">
+    <div class="hero-form">
+      <h3>Where are you going</h3>
+      <p>Fill out this form and one of our trainers will schedule a consult</p>
+      <form>
+        <label for="name">Going to</label>
+        <input type="text" placeholder="Where are you vacationing?" name="name" id="name" class="form-input" />
+        <label for="email">Dates</label>
+        <input type="text" placeholder="Dates" name="email" id="email" class="form-input" />
+        <!-- <p>
+          Have you worked out with a trainer before?
+          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+          <label for="trainer-yes">Yes</label>
+          <input type="radio" name="trainer-confirm" id="trainer-no" />
+          <label for="trainer-no">No</label>
+        </p> -->
+        <p>
+          <!-- <label for="checkbox">
+            I acknowledge that I am at least 18 years of age.
+          </label>
+          <input type="checkbox" name="checkpoint1" id="checkbox" />
+        </p> -->
+        <button type="submit">
+          Search
+        </button>
+      </form>
+    </div>
+  </section>
+
+
+  <!-- "meet the trainers" section -->
+  <section id="your-trainers" class="trainers">
+    <div class="flex-row">
+      <h2 class="section-title primary-border">Meet The Trainers</h2>
+    </div>
     
+    <article class="trainer">
+      <img src="./assets/images/section-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+  </section>
+
+  <!-- "reach out" section -->
+  <section id="reach-out" class="contact">
+    <div class="flex-row">
+      <h2 class="section-title secondary-border">Reach Out</h2> 
+    </div>
+    <div class="contact-info">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
+        style="border:0;" 
+        allowfullscreen=""
+        loading="lazy">
+      </iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer>
+    <h2>❤️ Made with love by Run Buddy.</h2>
+    <div>
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
+      &copy; 2019 Run Buddy, Inc.
+    </div>
+  </footer>
 </body>
+
 </html>
