--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>TravelMojo</title>
 </head>
 <body>
+    <h1>hell0</h1>
+    
     
 </body>
+
+<script src="./assets/js/script.js"></script>
+
 </html>
